--- a/assets/css/pages-css/team.css
+++ b/assets/css/pages-css/team.css
@@ -3,17 +3,17 @@
 }
 
 .team-container h1 {
-    text-shadow: 4px 0px 5px #92210f;
+    text-shadow: 4px 0px 5px #b3aead;
     font-family: 'Times New Roman', Times, serif;
 }
 
 .card {
-    box-shadow: 1px 0 5px #92210f;
+    box-shadow: 1px 0 5px #b3aaa9;
     border-radius: 12px;
 }
 
 .card:hover{
-    box-shadow: 2px 0 8px black;
+    box-shadow: 2px 0 8px rgb(145, 132, 132);
 }
 
 .team-inner-container {
